# imac2_projet_openGL

./: .gitignore  README.md
GLImac-Template/: CMakeLists.txt
GLImac-Template/Projet/: main.cpp
GLImac-Template/Projet/src/: Collider.hpp  Game.hpp  Map.hpp  MovingObject.hpp  Physic.hpp  Rendering.hpp  Rendering3D.hpp  RenderingInterface.hpp  StaticObject.hpp  TriggerObject.hpp  View.hpp  World.hpp
GLImac-Template/main/: CMakeLists.txt  main.cpp
GLImac-Template/main/maps/: 0.ppm  01.ppm  1.ppm  3.ppm  4.ppm  5.ppm
GLImac-Template/main/shaders/: directionalLight.fs.glsl  triangle.fs.glsl  triangle.vs.glsl
GLImac-Template/projet/: CMakeLists.txt
GLImac-Template/projet/doxygen/: CMakeLists.txt  Doxyfile-html.cmake
GLImac-Template/projet/include/: Audio.hpp  Bonus.hpp  Button.hpp  Camera.hpp  Character.hpp  Coin.hpp  Collider.hpp  Element2D.hpp  Enemy.hpp  FreeflyCamera.hpp  GPUProgram.hpp  GPUProgram2D.hpp  GPUProgram3D.hpp  Game.hpp  Illustration.hpp  Image.hpp  ImageButton.hpp  Light.hpp  Malus.hpp  Map.hpp  Mesh.hpp  Model3D.hpp  MovingObject.hpp  Music.hpp  Object.hpp  Obstacle.hpp  Physic.hpp  Player.hpp  Rendering.hpp  Rendering3D.hpp  RenderingInterface.hpp  Skin.hpp  Skybox.hpp  StaticObject.hpp  Text.hpp  TrackballCamera.hpp  TriggerObject.hpp  VAO.hpp  Vertex2DColor.hpp  Vertex2DUV.hpp  (+3 more)
GLImac-Template/projet/src/: Button.cpp  Camera.cpp  Character.cpp  Collider.cpp  Element2D.cpp  Game.cpp  Image.cpp  ImageButton.cpp  Map.cpp  Mesh.cpp  Model3D.cpp  MovingObject.cpp  Object.cpp  Obstacle.cpp  Physic.cpp  Player.cpp  Rendering.cpp  Rendering3D.cpp  (+9 more)
(+871 files in other folders)
